<resources>
    <string name="posts">Postovi</string>
    <string name="app_name">MojaApp</string>
    <string name="kreiraj_Post">Kreiraj Post</string>
    <string name="citaj_Post">Citaj post</string>
    <string name="settings">podesavanja</string>
    <string name="password">password</string>
    <string name="korisnicko_ime">korisnicko ime</string>
    <string name="back">back</string>

    <string name="naslov">naslov posta</string>
    <string name="opis_posta">opis posta</string>
    <string name="kreiraj_post_dugme"> kreiraj post </string>
    <string name="dodaj_sliku"> dodaj sliku</string>
    <string name="empty">izaberite sliku</string>
    <string name="about">informacije</string>



    <string name="hello_world">Hello world!</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <string name="action_delete">Delete</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_prikazi">Prikazi postove</string>
    <string name="nav_objavi">Kreiraj post</string>
    <string name="nav_settings">Podesavanja</string>
    <string name="obrisi_objavu">Obrisi</string>
    <string name="potvrdi_kreiranje">Potvrdi</string>
    <string name="odustani">Odustani</string>
    <string name="pocetna">Pocetna stranica</string>

    <string name="notifications">Notifications</string>
    <string name="filter">Filter</string>
    <string name="enterNewAdminName">Enter new admin name:</string>
    <string name="home_long">Map</string>
    <string name="groups_long">User groups</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>

    <string name="cant_aquire_account_message">iReviewr cannot acquire account information. Closing now.</string>
    <string name="no_valid_email_message">Selected account doesn\'t have a valid email, please select another one.</string>
    <string name="select_account_with_email_message">Please select an account with a valid email address.</string>
    <string name="username_exists_message">Username already exists.</string>
    <string name="email_exists_message">Email already exists. Try restarting the application or choosing another account.</string>
    <string name="cant_register_message">Could not register at this moment, try again later.</string>
    <string name="name_empty_message">Name must not be empty!</string>
    <string name="name_alphanum_message">Name must contain only alphanumeric characters!</string>
    <string name="name_maxlength_message">Name can\'t be longer than {} characters!</string>
    <string name="desc_alphanum_message">Description must contain only alphanumeric characters or interpunction!</string>
    <string name="desc_maxlength_message">Description can\'t be longer than {} characters!</string>
    <string name="enter_place_location_message">Please enter place location.</string>
    <string name="contains_tag_message">Already contains this tag.</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="comment_empty_message">Comment must not be empty!</string>
    <string name="comment_alphanum_message">Comment must contain only alphanumeric characters or interpunction!</string>
    <string name="comment_maxlength_message">Comment can\'t be longer than {} characters!</string>
    <string name="error_saving_message">Error while saving.</string>

    <string name="gallery">Gallery</string>
    <string name="tags">Tags</string>
    <string name="no">No</string>
    <string name="sure">Sure</string>
    <string name="oops">Ooops</string>
    <string name="add_photo">Add Photo</string>

    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="new_comments">New comments</string>
    <string name="new_">New</string>
    <string name="new_comments_on_reviews">New comments on my reviews: </string>
    <string name="new_comments_on_comments">New comments on my comments: </string>

    <string name="logout">Log out</string>


    <string name="team">Mobilne aplikacije FTN</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Search</string>
    <string name="action_new">Add new</string>
    <string name="title_activity_detail">DetailActivity</string>




    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_sortBy">Sort by</string>
    <string name="pref_radiusConnectionType">Radius lookup</string>

    <string name="pref_sort_post">pref_sort_post</string>
    <string name="pref_sort_comment">pref_sort_comment</string>
    <string name="pref_sync">pref_sync</string>


    <string name="post">Posts</string>
    <string name="comments">Comments</string>
</resources>
