<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_accept"
        android:title="@string/action_accept"
        android:icon="@drawable/ic_done"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />


</menu>
