<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostsActivity">

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kreiraj_Post"
        android:onClick="btnCreatePostActivity"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/citaj_Post"
        android:onClick="btnReadPostActivity"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="btnSettingsPostActivity"
        />


</LinearLayout>