<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_posts_pocetna"
            android:icon="@drawable/ic_home"
            android:title="@string/pocetna"
            android:onClick= "Home_go"/>
        
        <item
            android:id="@+id/navigation_create2_post"
            android:icon="@drawable/ic_read"
            android:title="@string/kreiraj_Post"
            android:onClick= "Create_go"
            />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:onClick="Settings_go"
            />
        <item
            android:id="@+id/navigation_logout"
            android:title="logout"
            android:onClick="Izloguj_se"/>

    </group>


</menu>