<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnPostsActivity"
        android:text="@string/posts" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonPost"
        android:layout_marginBottom="417dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/korisnicko_ime"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPost" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textUsername"
        android:layout_marginBottom="349dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPost"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="263dp"
        android:layout_marginEnd="110dp"
        android:layout_marginLeft="117dp"
        android:layout_marginRight="110dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="38dp"
        android:background="@android:color/darker_gray"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />


</android.support.constraint.ConstraintLayout>