<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >



    <CheckBoxPreference
        android:id="@+id/cbTest"
        android:key="checkBox"
        android:defaultValue="true"
        android:title="Check this by default" />

    <SwitchPreference
        android:id="@+id/notificationSwitch"
        android:key="notificationSwitch"
        android:title="@string/notifications"
        android:defaultValue="true"
        />


    <ListPreference
        android:id="@+id/listPreference"
        android:key="listPreference"
        android:title="Sleep Time"
        android:entries="@array/sleepTimeOptions"
        android:entryValues="@array/sleepTimeOptions"
        android:defaultValue="15 minutes" />

    <PreferenceCategory
        android:title="Sort post"
        android:key="sync_settings">







        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="imeUlogovanogKorisnika"
            android:title="Ulogovan: "
            android:summary="Ime ulogovanog korisnika" />

        <ListPreference
            android:id="@+id/pref_sort_post"
            android:dialogTitle="@string/pref_sortBy"
            android:entries="@array/pref_sortBy_entries"
            android:entryValues="@array/pref_sortBy_entries"
            android:key="pref_sort_post"
            android:title="@string/pref_sortBy"
            android:defaultValue="Date"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Sort comment"
        android:key="radius_settings">

        <ListPreference
            android:dialogTitle="@string/pref_sortBy"
            android:entries="@array/pref_sortBy_entries"
            android:entryValues="@array/pref_sortBy_entries"
            android:key="@string/pref_sort_comment"
            android:title="@string/pref_sortBy"
            android:defaultValue="Date"/>

    </PreferenceCategory>


    <!--

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="notif_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_my_review_key"
            android:summary="@string/notif_on_my_review_summ"
            android:title="@string/notif_on_my_review" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_my_comment_key"
            android:summary="@string/notif_on_my_comment_summ"
            android:title="@string/notif_on_my_comment" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/notif_on_sync_key"
            android:summary="@string/notif_on_sync_summ"
            android:title="@string/notif_on_sync_title" />

    </PreferenceCategory>

    -->



</PreferenceScreen>